--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,8 @@ services:
     image: nginx
     restart: always
     ports:
-      - 80:80
-      - 443:443
+      - $HTTP_PORT:80
+      - $HTTPS_PORT:443
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - $APP_DATA_PATH:/var/www/html
